fixed how background looks on mobile

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -57,26 +57,26 @@
   }
 
   .flat-button {
-    color: #287352;
+    color: #fff;
     background: 0 0;
     font: 11px;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
-    border: 1px solid #287352;
+    border: 1px solid #fff;
     float: right;
     border-radius: 4px;
     cursor: pointer;
   }
   
   .resume-button {
-    color: #287352;
+    color: #fff;
     background: 0 0;
     font: 11px;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
-    border: 1px solid #287352;
+    border: 1px solid #fff;
     float: right;
     border-radius: 4px;
     cursor: pointer;
