--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,15 +2,11 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-image: url('../../assets/images/rainer.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .top-tags {
   bottom: auto;
-  top: 35px;
+  top: 15px;
 }
 
 .tags {
@@ -52,7 +48,7 @@
     font-family: 'Coolvetica';
     color: #fff;
     font-weight: 400;
-    margin-top: 0;
+    margin-top: 56px;
     position: relative;
     margin-bottom: 40px;
     left: 10px;
